<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FaceRec</string>
    <string name="txtSysName">人证合一验证系统_限制时间版本</string>
    <string name="action_settings">Settings</string>
    <string name="txtSwipeID2Card">请刷二代身份证！</string>
    <string name="txtIdeImage">证件照片：</string>
    <string name="txtCamImage">现场照片：</string>
    <string name="txtName">姓名：</string>
    <string name="txtSex">性别：</string>
    <string name="txtNational">民族：</string>
    <string name="txtBirth">出生：</string>
    <string name="txtIdeNo">证件号：</string>
    <string name="txtAddress">住址：</string>
    <string name="txtDepartment">发证机关：</string>
    <string name="txtValidDate">证件有效期：</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtPleaseMsg">请将摄像头对准人脸！</string>
    <string name="txtConfig">参数设置</string>
    <string name="txtFirstLimit">识别门限：</string>
    <string name="txtSecondLimit">第二门限：</string>
    <string name="txtFirLimit">( 65 - 100 )</string>
    <string name="txtSecstLimit">( 60 - 99 )</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_detect">DetectActivity</string>
    <string name="txtCancel">    取    消    </string>
    <string name="txtBack">    返    回    </string>
    <string name="txtSetLimit">门限：</string>
    <string name="txtSave">    保    存    </string>
    <string name="txtPass">验证通过</string>
    <string name="txtFail">验证失败</string>
    <string name="txtRunning">正在验证...</string>
    <string name="txtSimilary">相似度：%1%</string>
    <string name="title_activity_compare">CompareActivity</string>
    <string name="txtFaceTest">The face test</string>
    <string name="txtCameraTest">The camera test</string>
    <string name="title_activity_feature">FeatureActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_dm2016">DM2016Activity</string>
    <string name="title_activity_read_id2">ReadID2Activity</string>
    <string name="title_activity_detect_task">DetectTaskActivity</string>
    <string name="title_activity_start">StartActivity</string>

</resources>
