<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSetLimit" />

            <EditText
                android:id="@+id/edtLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="2"
                android:text="45" >
            </EditText>

            <Button
                android:id="@+id/btnSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSave" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/pLayout"
            android:layout_width="240dp"
            android:layout_height="320dp"
            android:background="@color/line_frame"
            android:padding="@dimen/lineSize" >

            <SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="240dp"
                android:layout_height="320dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/txtMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/txtSwipeID2Card"
            android:textColor="@color/red"
            android:textSize="@dimen/dialogTextSize"
            android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                         >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtIdeImage"
                            android:textSize="@dimen/dialogTextSize" />

                        <ImageView
                            android:id="@+id/ivIdeImage"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:background="@drawable/table_frame_gray"
                            android:padding="@dimen/lineSize"
                            android:src="@drawable/nobody" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtSimMsg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text=""
                            android:textColor="@color/line_frame"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtSimValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtCamImage"
                            android:textSize="@dimen/dialogTextSize" />

                        <ImageView
                            android:id="@+id/ivCutImage"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:background="@drawable/table_frame_gray"
                            android:padding="@dimen/lineSize"
                            android:src="@drawable/nobody" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
         >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/table_frame_gray" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txtName"
                android:textSize="@dimen/dialogTextSize" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/dialogTextSize" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/table_frame_gray" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txtIdeNo"
                android:textSize="@dimen/dialogTextSize" />

            <TextView
                android:id="@+id/txtIdeNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/dialogTextSize" />
        </TableRow>
    </TableLayout>

</LinearLayout>